# imap-filter-rust

./: .tmuxinator.yml  Cargo.toml  README.org  build.rs
.fish/functions/: set_secrets.fish
example/: basic.lua  sample.emf  simple.lua
if-dsl/: Cargo.toml  build.rs
if-dsl/example/: sample.emf
if-dsl/src/: imapdsl.l  imapdsl.y  main.rs
lua/: README.org  imap-filter.lua
snap/: snapcraft.yaml
src/: dsl.rs  imapdsl.l  imapdsl.y  lib.rs  lua_rust_conv.rs  lua_to_rust_conversion.rs
src/command/: check.rs  mod.rs  run.rs
