[package]
name = "imap-filter"
version = "0.0.0"
authors = ["Fred Mitchell <fred.mitchell@gmx.de>"]
edition = "2018"

[dependencies]
async-imap = "0.2.0"
clap-nested = "0.3.1"
qt_core = "0.4.1"
cfgrammar = "0.6.1"
lrpar = "0.6.1"
lrlex = "0.6.1"

[dev-dependencies] 
gdb = "0.1.0"

[build-dependencies]
cfgrammar = "0.6.1"
lrpar = "0.6.1"
lrlex = "0.6.1"

### [workspace]
### members = [
###     "if-dsl",
### ]
