[package]
name = "imap-filter"
version = "0.0.0"
authors = ["Fred Mitchell <fred.mitchell@gmx.de>"]
edition = "2018"
repository = "https://github.com/flajann2/imap-filter-rust"

[dependencies]
async-imap = "0.2"
clap = "2.33"
clap-nested = "0.3"
mlua = "0.3"
gen_indices = "0.0"
pancurses = { version = "0.16", optional = true }
termion = { version = "1.5", optional = true }
easycurses = { version = "0.12", optional = true }
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies] 
gdb = "0.1"

[build-dependencies]
